# AutonomousDrivingModelCar2DCamera

./: .gitignore  .gitmodules  README.md  ha ha raphi
docs/: setup_cartv.md  setup_cpiclib.md
src/: readme.md
src/Arduino/canreader/: canreader.ino
src/Arduino/driver/: accelerometer.cpp  accelerometer.h  driver.ino  servotest.cpp  servotest.h  steering.cpp  steering.h
src/Arduino/motortest/: motortest.ino
src/Arduino/servotest/: servotest.ino
src/CPicLib/: CMakeLists.txt  README.md  cpiclib.c
src/CPicLib/include/: cpiclib.h
src/CPicLib/py/: cpiclib.py
src/CPicLib/tests/: cpiclib.test.py
src/CarTV/: .gitignore  app.py  package-lock.json  package.json  requirements.txt
src/CarTV/config/: webpack.config.base.js  webpack.config.dev.js  webpack.config.prod.js
src/NXP_Cup_Alamak_Minimal/: ReferencedRSESystems.xml  SaAnalysispointsManager.apconfig
src/PiCanCamera/: canImageMessage.py  canexample.py  cpiclib.py  main.py  rgb.py  setup.sh  setup.txt  testimage.py
src/Raspberry Pi/: main.py  requirements.txt  setup.sh  setup.txt
src/Raspberry Pi/CPicLib/: CMakeLists.txt  README.md  __init__.py
src/Raspberry Pi/CPicLib/include/: cpiclib.h  edge_detection.h  export.h  filter.h  houghtransform.h  ridge_detection.h
src/Raspberry Pi/CPicLib/src/: cpiclib.c
src/Raspberry Pi/CPicLib/src/edge_detection/: canny_edge_detection.c  kernel_operator.c  prewitt_operator.c  sobel_operator.c
src/Raspberry Pi/CPicLib/src/filter/: convolution.c  gaussian.c  grayscale.c
src/Raspberry Pi/CPicLib/src/ridge_detection/: detect_mid.c
src/servotest/: servotest.ino
(+107 files in other folders)
